fix overflow

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -8,5 +8,5 @@ ion-label p {
 
 .updates {
   height: calc(65%);
-  overflow: scroll;
+  overflow-y: scroll;
 }
